# model-atlas

./: .env.example  .gitignore  CLAUDE.md  GETTING-STARTED.md  README.md  pyproject.toml
.claude/skills/: bundle-for-gem  code-ingest  deck-ingest  docx-extract  formula-index  formula-ocr  knowledge-hub  md-normalize  qa-report  structured-extract  structured-index  video-ingest
content/: index.md  log.md
content/compliance/: genai-acceptable-use.md  index.md  model-risk-101.md  npi-data-handling.md
content/lessons/: 2024-assumption-drift.md  2025-vendor-data-gap.md  index.md  lesson-template.md
content/models/: index.md  model-monitoring-town-hall.md
content/onboarding/: faq.md  first-90-days.md  glossary.md  index.md  new-analyst-orientation.md  using-atlas.md  welcome.md  who-to-ask.md
content/tooling/: atlas-hub.md  atlas-pipeline.md  gem-knowledge-pack.md  index.md
docs/: compliance.md  gem-configuration.md  maintenance-and-roadmap.md  operating-model.md  pipeline.md
examples/: README.md
examples/decks/: make_demo_deck.py  new-analyst-orientation.pptx
examples/videos/: model-monitoring-town-hall.vtt
hub/: README.md  __init__.py  app.py  config.py
hub/assets/: atlas.css
hub/engine/: __init__.py  claude_adapter.py  copilot.py  http_adapter.py  loader.py  recommend.py  search.py  state.py
hub/ui/: __init__.py  components.py  views.py
schemas/: assumptions.schema.json  data.schema.json  dependencies.schema.json  formula.schema.json  governance.schema.json  metrics.schema.json
skills/: README.md
skills/bundle-for-gem/: SKILL.md  grouping.yaml  helper.py
skills/code-ingest/: SKILL.md  prepare_worklist.py  runbook_template.md
tests/: test_hub_engine.py  test_one_doc.py  test_skills_structure.py  test_ui_browser.py
(+42 files in other folders)
