[project]
name = "model-atlas"
version = "0.1.0"
description = "Offline pipeline that turns model whitepapers into a portable RAG knowledge pack (Gem today, Vertex AI / NotebookLM tomorrow)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "mammoth>=1.7.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "markdownify>=0.11.6",
    "jinja2>=3.1.0",
    "jsonschema>=4.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
