[project]
name = "atlas"
version = "0.2.0"
description = "Atlas — a centralized knowledge hub (Dash UI + search/copilot engine) plus the offline pipeline that turns model whitepapers, decks, videos, and code into a portable OKF/Markdown knowledge pack."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "mammoth>=1.7.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "markdownify>=0.11.6",
    "jinja2>=3.1.0",
    "jsonschema>=4.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
hub = [
    "dash>=3.0",
    "dash-bootstrap-components>=2.0",
]
ingest = [
    "python-pptx>=0.6.23",
]
e2e = [
    "playwright>=1.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
